<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.project.therollamissionapp.ui.registration.RegistrationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consent_directions"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            style="@style/TextAppearance.AppCompat.Headline1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_consent_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewmodel.consent1}"
                android:text="@string/consent_1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                style="@style/TextAppearance.AppCompat.Body1"
                android:gravity="start" />

            <CheckBox
                android:id="@+id/checkbox_consent_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewmodel.consent2}"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/consent_2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                style="@style/TextAppearance.AppCompat.Body1"
                android:gravity="start" />

            <CheckBox
                android:id="@+id/checkbox_consent_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewmodel.consent3}"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/consent_3"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                style="@style/TextAppearance.AppCompat.Body1"
                android:gravity="start" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signature_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                style="@style/TextAppearance.AppCompat.Body1"/>

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:id="@+id/sp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/lightGray"
                onSigned="@{() -> viewmodel.onSignedSignature(sp)}" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sp"
                android:onClick="@{() -> sp.clear()}"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/clear_signature"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                style="@style/TextAppearance.AppCompat.Headline1"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
